수정 전부 다 보이기

--- a/src/expenses/index.html
+++ b/src/expenses/index.html
@@ -111,7 +111,7 @@
 
     <script>
       // socket 변수를 외부에서 한번만 생성
-      const socket = io('ws://localhost:3000/expenses', {
+      const socket = io('wss://www.daebak.store/expenses', {
         transports: ['websocket'],
         withCredentials: true,
       });
