--- a/src/expenses/index.html
+++ b/src/expenses/index.html
@@ -187,7 +187,7 @@
         }
       });
 
-      // 경비 추가시 하나 받아와서 화면 업데이트
+      // 경비 추가시 받아와서 화면 업데이트
       socket.on('expenseCreated', (expense) => {
         const expenseList = document.getElementById('expense-list');
         const expenseItem = document.createElement('div');
@@ -254,32 +254,6 @@
         document.getElementById('edit-date').value = date;
       }
 
-      // //수정에서 저장 버튼 클릭시 수정 내용 저장
-      // function saveEdit() {
-      //   const expenseId = document.getElementById('edit-expense-id').value;
-      //   const price = document.getElementById('edit-price').value;
-      //   const category = document.getElementById('edit-category').value;
-      //   const description = document.getElementById('edit-description').value;
-      //   const date = document.getElementById('edit-date').value;
-      //   const room = document.getElementById('room').value;
-      //   const selectedDay = document.getElementById('day-select').value; // 선택된 일차
-      //   socket.emit('editExpense', {
-      //     tripId: room,
-      //     expenseId,
-      //     expenseData: { price, category, description, date },
-      //   });
-      //   document.getElementById('edit-form').style.display = 'none';
-      //   if (selectedDay === '전체 경비') {
-      //     socket.emit('getAllExpenses', { tripId: room });
-      //     return;
-      //   } else {
-      //     socket.emit('filterExpensesByDay', {
-      //       tripId: room,
-      //       day: selectedDay,
-      //     });
-      //   }
-      // }
-
       function saveEdit() {
         const expenseId = document.getElementById('edit-expense-id').value;
         const price = document.getElementById('edit-price').value;
@@ -314,21 +288,6 @@
         document.getElementById('edit-description').value = '';
         document.getElementById('edit-date').value = '';
       }
-
-      // // 경비 항목 삭제
-      // function deleteExpense(expenseId, day) {
-      //   const room = document.getElementById('room').value;
-      //   const selectedDay = document.getElementById('day-select').value; // 선택된 일차
-      //   if(selectedDay === '전체 경비') {
-      //     alert('일차를 선택해주세요.');
-      //     return;
-      //   }
-      //   socket.emit('deleteExpense', {
-      //     tripId: room,
-      //     expenseId,
-      //     day: selectedDay,
-      //   });
-      // }
 
       function deleteExpense(expenseId) {
         const room = document.getElementById('room').value;
